00006296: Module imagewall: resize images onload

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/image-wall/js.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/image-wall/js.tml
@@ -62,7 +62,7 @@
 		return this.each(function(){
 			var el = $(this);
 			updateSize(el)
-			$(window).on("resize", function(){
+			$(window).on("resize load", function(){
 				updateSize(el)
 			});
 		})
