00006297: Unable to save content type if it contains fields defined in schema.xml

--- a/OpenWGA/plugins/cm-neo/design/tml/html/admin/pagetypes/mode-edit.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/admin/pagetypes/mode-edit.tml
@@ -1,5 +1,18 @@
 <tml:action id="save">
+	
+	// remove all fields that are defined by schema.xml
+	if(document.isMetaDeterminedInSchema){
+		var fields = tmlform.fieldnames.iterator()
+		while(fields.hasNext()){
+			var field = fields.next();
+			if(document.isMetaDeterminedInSchema(field)){
+				tmlform.removefield(field)
+			}
+		}
+	}		
+	
 	tmlform.store()
+
 </tml:action>
 
 <tml:action id="delete">
