--- a/OpenWGA/plugins/admin/design/tml/html/wga/error-page/form.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/wga/error-page/form.tml
@@ -25,7 +25,7 @@
 <fieldset>	
 	
 	<tml:[system:fs-input] o_field="customErrorPageEnabled" o_type="boolean"/>
-	<tml:[system:fs-input] o_field="customErrorPage" o_type="textarea" o_renderAs="textarea"/>
-
+	<tml:[system:fs-input] o_field="customErrorPage" o_type="textarea" o_renderAs="textarea" o_wrap_input="pre"/>
+	
 </fieldset>
 
