--- a/OpenWGA/plugins/admin/design/tml/html/system/fs-input.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/system/fs-input.tml
@@ -47,7 +47,7 @@
 	_wrap = "";
 	if(option("wrap_input")){
 		_wrap = "<" + option("wrap_input") + ">"
-		_end_wrap = "</" + option("wrap") + ">"
+		_end_wrap = "</" + option("wrap_input") + ">"
 	}
 	
 </tml:script>
