00006324: Admin Client: show disabled job schedules with line-through style

--- a/OpenWGA/plugins/admin/design/tml/html/jobs/mod-joblist.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/jobs/mod-joblist.tml
@@ -82,8 +82,9 @@
 					_schedules = _job.schedules;
 				</tml:script>
 				<tml:foreach type="itemvalue" item="_schedules" currentvalue="_schedule">
-					<br>
-					<tml:item name="_schedule"/>
+					<div <tml:case condition="!_schedule.enabled">style="text-decoration: line-through"</tml:case>>
+						<tml:item name="_schedule.description"/>
+					</div>
 				</tml:foreach>
 			</td>
 			<tml:if condition="_job.runtime">
