00006329: Changed wording in V-Host view

--- a/OpenWGA/plugins/admin/design/tml/html/wga/v-hosts/portlet.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/wga/v-hosts/portlet.tml
@@ -141,9 +141,9 @@
 					
 					<table class="collection" width="100%">
 						<tr class="collection-title">
-							<td>Server Name</td>
-							<td>Allowed Databases</td>
-							<td>Default Database</td>
+							<td>Host Name</td>
+							<td>Allowed Apps</td>
+							<td>Default App</td>
 							<td></td>
 							<td width="1%"></td>
 							<td width="1%"></td>
