--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/image/outline.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/image/outline.tml
@@ -1,5 +1,22 @@
 <tml:include ref="system:outline" o_style="background:#efefef">
 	<div style="text-align:center;font-size:4em;color:silver" title="<tml:script expression="CMM.setting('image')"/>">
-		<i class="far fa-image"></i>
+		<tml:script>
+			_url=null;
+			var ctx;
+			if(!CMM.setting("source")){
+				ctx=this;
+			}
+			else{
+				var ctx_expr = (CMM.setting("dbkey")!="this" ? "db:" + CMM.setting("dbkey") + "/" : "")
+					+ "docid:" + CMM.setting("sourcedoc") 
+					+ (CMM.setting("lang") ? "." + CMM.setting("lang") + ".0" : "")
+				 
+				ctx = context(ctx_expr, false);		
+			}
+			if(ctx)
+				_url = ctx.fileImageDerivateURL(CMM.setting("image"), "width~100")
+		</tml:script>
+		<tml:{img} html-src="_url" if="_url"/>
+		<tml:{span} html_class="far fa-image" unless="_url"/>
 	</div>
 </tml:include>
