--- a/OpenWGA/plugins/admin/design/tml/html/wga/v-hosts/portlet.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/wga/v-hosts/portlet.tml
@@ -185,8 +185,10 @@
 								</td>								
 								<td>
 									<tml:script>
-										if(_host.defaultDatabase)
-											return DBM.wgaconfig.getByUid(_host.defaultDatabase).key;
+										if(_host.defaultDatabase){
+											var d = DBM.wgaconfig.getByUid(_host.defaultDatabase)
+											return d ? d.key : "App not found: " + _host.defaultDatabase
+										}
 										else return "- None -"
 									</tml:script>
 								</td>
