00006342: Module Image-Wall: added lightbox image group setting

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/image-wall/render.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/image-wall/render.tml
@@ -94,7 +94,7 @@
 		require(["jquery", "jquery-lightbox"], function($){
 			$(function(){
 				$("#album-<tml:option name="ns"/>").find("img").lightbox({
-					group: "<tml:option name="ns"/>",
+					group: "<tml:script expression="CMM.setting('image_group')||'default'"/>",
 					download: <tml:script expression="CMM.setting('download')"/>
 				})
 			})
