--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/form/plugin-cm-neo/field-settings.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/form/plugin-cm-neo/field-settings.tml
@@ -101,7 +101,7 @@
 			</tml:case>
 			
 			<tml:case if="$option_cmm_styles">
-				<div style="padding:10px;_background: #efefef">
+				<div style="padding:10px>
 					<tml:option name="cmm_styles"/>
 				</div>
 				<tml:script>
