--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/image/outline.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/image/outline.tml
@@ -16,7 +16,7 @@
 			if(ctx)
 				_url = ctx.fileImageDerivateURL(CMM.setting("image"), "width~100")
 		</tml:script>
-		<tml:{img} html-src="_url" if="_url"/>
+		<tml:{img} html-src="_url" html_style="max-width:100px" if="_url"/>
 		<tml:{span} html_class="far fa-image" unless="_url"/>
 	</div>
 </tml:include>
