00006360: CM-Neo: use new meta ARCHIVED in content panel and version panel

--- a/OpenWGA/plugins/cm-neo/design/tml/html/sidebar/content-properties.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/sidebar/content-properties.tml
@@ -73,6 +73,15 @@
 						
 					{{/published}}
 
+					{{#archived}}
+						<div class="form-group">
+							<label>Archiviert</label>
+							<p class="data">
+								{{archived}}
+							</p>
+						</div>
+					{{/archived}}
+					
 					{{#abgelaufen}}
 						<div class="form-group" style="color:red">
 							<label>
