00006366: Improved / restructured javascript usage in some modules

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/google-map/config.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/google-map/config.tml
@@ -35,7 +35,7 @@
 	allowedchildren: ["cm_google_map_marker"],
 	includes:		{
 		tml:	'modules:google-map:google-maps-api',
-		js:		'modules:google-map:js',
+		js:		'google-maps',
 		css:	'modules:google-map:css'
 	}
 }
