Added module classes to formfield element

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/form/render_field.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/form/render_field.tml
@@ -64,6 +64,7 @@
 </tml:script>
 
 <div class="clearfix formfield field-type-<tml:script expression="CMM.setting('fieldtype')"/>
+		<tml:option name="module_classes"/>
 		<tml:case condition="tmlform.hasmessage(_fieldname)"> error</tml:case>
 		<tml:case condition="CMM.setting('divider')=='single-line'">single-line</tml:case>
 	">
